Updated conway.js for optimised algorithm.

--- a/wtf.sg.html
+++ b/wtf.sg.html
@@ -22,6 +22,19 @@
 		var CELL_COLOR='#F3804F';
 	</script>
 	<script type="text/javascript" src="conway.js"></script>
+	<script type="text/javascript">
+		var isCtrl = false;
+		document.onkeyup=function(e){
+			if(e.which == 17) isCtrl=false;
+		}
+		document.onkeydown=function(e){
+			if(e.which == 17) isCtrl=true;
+			if(e.which == 83 && isCtrl == true) {
+				toggle();
+				return false;
+			}
+		}
+	</script>
 </head>
 
 <body class="home blog">
