--- a/conway.html
+++ b/conway.html
@@ -5,12 +5,50 @@
 		<script type="text/javascript">
 			var CELL_WIDTH = 5;
 			var CELL_COLOR = 'rgb(0,200,0)';
-			var preload = function() {
-				board[67][19].clicked();
-				board[66][20].clicked();
-				board[66][21].clicked();
-				board[67][21].clicked();
-				board[68][21].clicked();
+			var preload = function(board) {
+			board[92][29].clicked();
+			board[92][30].clicked();
+			board[93][29].clicked();
+			board[93][30].clicked();
+			board[100][12].clicked();
+			board[100][13].clicked();
+			board[101][12].clicked();
+			board[101][14].clicked();
+			board[102][14].clicked();
+			board[102][29].clicked();
+			board[102][30].clicked();
+			board[102][31].clicked();
+			board[103][14].clicked();
+			board[103][15].clicked();
+			board[103][28].clicked();
+			board[103][32].clicked();
+			board[104][27].clicked();
+			board[104][33].clicked();
+			board[105][27].clicked();
+			board[105][33].clicked();
+			board[106][30].clicked();
+			board[107][28].clicked();
+			board[107][32].clicked();
+			board[108][29].clicked();
+			board[108][30].clicked();
+			board[108][31].clicked();
+			board[109][30].clicked();
+			board[112][27].clicked();
+			board[112][28].clicked();
+			board[112][29].clicked();
+			board[113][27].clicked();
+			board[113][28].clicked();
+			board[113][29].clicked();
+			board[114][26].clicked();
+			board[114][30].clicked();
+			board[116][25].clicked();
+			board[116][26].clicked();
+			board[116][30].clicked();
+			board[116][31].clicked();
+			board[126][27].clicked();
+			board[126][28].clicked();
+			board[127][27].clicked();
+			board[127][28].clicked();
 			};
 		</script>	
 		<script type="text/javascript" src="conway.js"></script>
